--- a/z css files/utility classes.css
+++ b/z css files/utility classes.css
@@ -207,7 +207,7 @@ nav ul li a .item{
     bottom: 0;
 }
 
-.translated{
+.translated2{
     top: 36px;
     position: absolute;
     transition: .5s;
